문제 - char 오름차순 qsort (내 풀이)

--- a/ProgrammingLanguage.vcxproj
+++ b/ProgrammingLanguage.vcxproj
@@ -126,13 +126,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="save.cpp" />
-    <ClCompile Include="메인.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="save.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="2025 2학기 프로그래밍언어 강의저장.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include=".editorconfig" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
