--- a/ShapeManager/ShapeManager.vcxproj
+++ b/ShapeManager/ShapeManager.vcxproj
@@ -141,6 +141,9 @@
     <ClInclude Include="ShapeManager.h" />
     <ClInclude Include="triangle.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="shapes.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
