--- a/ShapeManager/ShapeManager.vcxproj
+++ b/ShapeManager/ShapeManager.vcxproj
@@ -125,6 +125,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="circle.cpp" />
+    <ClCompile Include="line.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="point.cpp" />
     <ClCompile Include="rectangle.cpp" />
@@ -134,6 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="circle.h" />
+    <ClInclude Include="line.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="point.h" />
     <ClInclude Include="rectangle.h" />
